--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -294,6 +294,7 @@
         font-size: 2.2rem;
         font-weight: 500;
         line-height: 145.455%;
+        color: var(--text-color);
     }
 
     &__view-all {
@@ -332,6 +333,7 @@
 
     &__label,
     &__value {
+        color: var(--text-color);
         font-size: 1.8rem;
         line-height: 145.455%;
     }
@@ -352,7 +354,7 @@
     &__separate {
         margin: 20px 0;
         height: 1px;
-        background: var(--header-act-dropdown-border-color);
+        background: var(--text-color);
     }
 }
 
@@ -362,7 +364,7 @@
     &__img-wrap {
         position: relative;
         padding-top: 100%;
-        border: 1.5px solid var(--header-act-dropdown-border-color);
+        border: 1.5px solid var(--text-color);
         border-radius: 10px;
     }
 
@@ -379,6 +381,7 @@
         margin-top: 14px;
         font-size: 1.4rem;
         line-height: 142.857%;
+        color: var(--text-color);
     }
 
     &__price {
@@ -386,6 +389,7 @@
         font-size: 1.5rem;
         font-weight: 500;
         line-height: 146.667%;
+        color: var(--text-color);
     }
 }
 
